<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/text_login"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/text_login_motto1"
        android:textColor="@color/lead_white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_et_username"
        android:drawableStart="@mipmap/user"
        android:drawablePadding="20dp"
        android:hint="@string/hint_login_username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_et_password"
        android:drawableStart="@mipmap/password"
        android:drawablePadding="20dp"
        android:hint="@string/hint_login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/grey" />

    <EditText
        android:id="@+id/et_login_password_again"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_et_password_again"
        android:drawableStart="@mipmap/password"
        android:drawablePadding="20dp"
        android:hint="@string/hint_login_password_again"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="20dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="visible"
            android:textSize="21sp"
            android:textStyle="bold" />
        <View
            android:id="@+id/btn_loading_bg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_login_loading"/>
        <ProgressBar
            android:id="@+id/iv_login_loading"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_login_load_success"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/refresh_success" />

        <ImageView
            android:id="@+id/iv_login_load_fail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/fail" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:autoLink="all"
        android:text="@string/text_to_register"
        android:textColor="@color/white" />

</LinearLayout>