<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:background="@drawable/bg_et_main_search"
            android:gravity="center_vertical"
            android:hint="@string/hint_et_main_search"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:transitionName="shared_search_et"
            android:inputType="text"
            android:lines="1"/>

        <ImageView
            android:id="@+id/iv_search_go"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:src="@mipmap/icon_search"
            android:transitionName="shared_photo_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_hot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_search_hot"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.aefottt.redrockwinterworkqt.view.my.FlowLayout
            android:id="@+id/fl_hot_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_search_non"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_get_non"
            android:textSize="18sp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_searching"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_searching"
            />
    </LinearLayout>

</LinearLayout>